frontend/styles/_pages.scss
.blue.content-box {
  margin: 0 auto;
  margin-top: 3rem;
  width: 90vw;
  .large-up-2 & {
    width: 100%;
  }
  max-width: 600px;
  @media (min-width: 1100px) {
    max-width: 675px;
  }
  @media (min-width: 1550px) {
    max-width: 875px;
  }
  padding: 40px;

  .full-width {
    margin-left: -38px;
    margin-right: -38px;
  }
  .flute-image {
    height: 300px;
    background-size: cover;
    background-position: center center;
    margin-bottom: 1rem;
  }

  p + h3:before, details + h3:before, details-preamble {
    content: ' ';
    display: block;
    border-top: 20px solid map-get($foundation-palette, secondary);
    border-bottom: 40px solid map-get($foundation-palette, secondary);
    background: $body-background;
    margin-left: -40px;
    margin-right: -40px;
    height: 100px;
  }
  h3 {
    margin-bottom: 1.5rem;
  }
  
  details > summary {
    cursor: pointer;
    margin-bottom: 0.9rem;
    border-bottom: 2px solid transparent;
    -webkit-user-select: none;
    user-select: none;

    &:focus {
      outline: none;
      border-bottom-color: #f1c363;
    }
  }

  details h3 {
    display: inline-block;
    margin-bottom: 0.75rem;
    position: relative;
    top: 6px;
  }

  details[open] {
    padding-bottom: 1rem;
  }

  p:last-of-type {
    margin-bottom: 0;
  }

  blockquote {
    &, p {
      color: white
    }
    font-style: italic;
  }

  @media (max-width: map-get($breakpoints, medium)) {
    padding: 20px;

    .full-width {
      margin-left: -18px;
      margin-right: -18px;
    }

    .flute-image {
      height: 250px;
    }

    p + h3:before {
      border-top-width: 10px;
      border-bottom-width: 20px;
      margin-left: -20px;
      margin-right: -20px;
    }
  }
}

body.product_line, body.product, body.world_flute {
  div.amber {
    padding: 40px 0;

    .callout {
      margin-top: 2rem;
    }
  }

  .amber h4 {
    color: white;
    margin-top: 1rem;
    margin-bottom: 1rem;
  }

  .product-item {
    figure {
      cursor: pointer;
    }
  }

  img.product-image {
    margin-bottom: 1rem;
    border-radius: 8px;
    box-shadow: 0px 10px 20px rgba(0,0,0,0.3);
  }
  @media (max-width: map-get($breakpoints, medium)) {
    figure:last-of-type {
      margin-bottom: 1rem;
    }
  }

  img.image-preview {
    transition: all 0.2s ease-out;

    &:hover {
      transform: translate(0px, -6px) scale(1.03);
    }
  }

  --sl-z-index-dialog: 10000;

  sl-dialog {
    --body-spacing: 0 1.25rem 1.25rem;
    @media (max-width: map-get($breakpoints, medium)) {
      --body-spacing: 0 0.5rem 1.25rem;
    }

    --sl-shadow-x-large: none;
  }

  sl-dialog::part(panel) {
    max-height: 100vh;
    max-width: 100%;
  }
  sl-dialog::part(close-button) {
    color: white;
  }

  sl-dialog img.product-image {
    max-height: calc(100vh - 3.75rem);
  }

  .product-thumbnail {
    width: 100px;
    margin-right: 0.6rem;
  }

  .button.large {
    font-size: 1.15rem;
    margin-bottom: 0.3em;
    margin-left: 0.5em;
    border-radius: 6px;
    box-shadow: 0px 3px 6px rgba(0,0,0,0.3);
    i.fa {
      margin-right: 0.25em;
    }
  }

  .button.snipcart-add-item {
    transition: all 0.2s ease-out;

    &:hover {
      transform: translate(0px, -6px) scale(1.03);
    }
  }

  @media (min-width: 1265px) {
    .large-up-2>.column:nth-of-type(1n) {
      .content-box {
        margin-left: 0;
        margin-right: auto;
      }
    }
    .large-up-2>.column:nth-of-type(2n+1) {
      .content-box {
        margin-right: 0;
        margin-left: auto;
      }
    }
  }
}


body.about {
  header#page-title {
    background-image:url(/assets/working-on-headjoints.jpg);
    background-size: cover;
    background-position: center center;
    padding-top: 9rem;
    padding-bottom: 30px;
  }
  h1 {
    color: white;
    margin-bottom: 4rem;
    text-shadow: 1px 2px 1px rgba(0,0,0,0.3);
    line-height: 1;

    @media (max-width: 1300px) {
      margin-bottom: 3rem;
    }

    @media (max-width: 1100px) {
      margin-bottom: 2rem;
    }

    @media (max-width: 760px) {
      margin-bottom: 2rem;
    }
  }
  .about-content {
    background: #18677f;
    background: linear-gradient(to bottom, transparentize(#18677f, 0.06), transparentize(#0c3d22, 0.06));
    color: white;
    padding: 50px;
    padding-bottom: 10px;
    width: 65%;
    margin-left: auto;
    margin-right: auto;
    @include breakpoint(small down) {
      padding-left: 20px;
      padding-right: 20px;
    }

    .post-image {
      @include breakpoint(medium up) {
        margin-left: -20px;
        margin-right: -20px;
      }
      margin-bottom: 2rem;

      img {
        border: 6px solid #f1c363;
      }
    }

    @include breakpoint(small down) {
      width: 90%;
    }

    .button.hollow.white:hover, .button.hollow.white:focus {
      border-color: $light-gold;
      color: $light-gold;
    }
  }
}

button.category-option {
  width: 100%;
  border: none;
  border-radius: 3px;
  padding: 10px;
  background: white;
  color: #6e5f42;
  &.category-active {
    background: #6e5f42;
    color: white;
  }
}

.product-item {
  .product-thumbnail {
    display: inline-block;
  }
}

